--- a/src/main/resources/templates/create-group.html
+++ b/src/main/resources/templates/create-group.html
@@ -7,20 +7,16 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="stylesheet" th:href="@{/style.css}">
-</head>
+    <script th:src="@{/js/userAvatar.js}"></script>
 <body>
 <div class="header">
     <div class="logo">
         <img th:onclick="|window.location.href='@{/home}'|" th:src="@{/images/logo.png}" alt="Logo" class="logo-img">
     </div>
     <div class="buttons">
-        <div sec:authorize="!isAuthenticated()">
-            <a class="form-group" th:onclick="|window.location.href='@{/login}'|">Entrar</a>
-            <div class="separator"></div>
-            <button class="button" th:onclick="|window.location.href='@{/register}'|">Cadastre-se</button>
-        </div>
         <div sec:authorize="isAuthenticated()" class="user-dropdown">
-            <i class="fas fa-user-circle user-icon"></i>
+            <i class="fas fa-user-circle user-icon" id="userAvatarIcon"
+               th:attr="data-avatar=${#authentication.principal.avatar}"></i>
             <div class="dropdown-content">
                 <div class="user-name" th:text="${#authentication.principal.nickname}"></div>
                 <a th:href="@{/account}">Gerenciar conta</a>
@@ -34,10 +30,8 @@
         </div>
     </div>
 </div>
-
 <div class="form-container">
     <h2 class="title">Criar partida</h2>
-
     <form th:action="@{/groups}" method="post" class="form">
         <div class="form-group">
             <label for="groupName">Nome do Grupo</label>
@@ -47,7 +41,6 @@
         <button type="submit" class="btn btn-primary btn">Criar grupo</button>
     </form>
 </div>
-
 <div class="footer-bar">
     Convide seus amigos e comece a marcar suas partidas de dominó agora mesmo!
 </div>
@@ -58,13 +51,11 @@
     document.addEventListener('DOMContentLoaded', function() {
         const userIcons = document.querySelectorAll('.user-icon');
         const dropdownContents = document.querySelectorAll('.dropdown-content');
-
         userIcons.forEach(icon => {
             icon.addEventListener('click', function(e) {
                 e.stopPropagation();
                 const dropdown = this.closest('.user-dropdown');
                 const content = dropdown.querySelector('.dropdown-content');
-
                 dropdownContents.forEach(dc => {
                     if (dc !== content) {
                         dc.style.display = 'none';
