--- a/src/main/resources/templates/forgot-password.html
+++ b/src/main/resources/templates/forgot-password.html
@@ -33,34 +33,6 @@
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-<script>
-    document.addEventListener('DOMContentLoaded', function() {
-        const form = document.getElementById('forgotPasswordForm');
-        const submitBtn = document.getElementById('submitBtn');
-        const btnText = document.getElementById('btnText');
-        form.addEventListener('submit', function(e) {
-            if (!submitBtn.dataset.originalText) {
-                submitBtn.dataset.originalText = btnText.textContent;
-            }
-            submitBtn.classList.add('btn-loading');
-            submitBtn.disabled = true;
-            btnText.textContent = 'Processando...';
-        });
-        const errorAlert = document.getElementById('errorAlert');
-        if (errorAlert) {
-            setTimeout(() => {
-                errorAlert.classList.add('fade');
-                setTimeout(() => errorAlert.remove(), 500);
-            }, 2500);
-        }
-        const successAlert = document.getElementById('successAlert');
-        if (successAlert) {
-            setTimeout(() => {
-                successAlert.classList.add('fade');
-                setTimeout(() => successAlert.remove(), 500);
-            }, 5000);
-        }
-    });
-</script>
+<script th:src="@{/js/common.js}"></script>
 </body>
 </html>
