--- a/src/main/resources/templates/reset-password.html
+++ b/src/main/resources/templates/reset-password.html
@@ -37,31 +37,6 @@
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-<script>
-    document.addEventListener('DOMContentLoaded', function() {
-        const form = document.getElementById('resetPasswordForm');
-        const submitBtn = document.getElementById('submitBtn');
-        const btnText = document.getElementById('btnText');
-        form.addEventListener('submit', function() {
-            submitBtn.classList.add('btn-loading');
-            submitBtn.disabled = true;
-            btnText.textContent = 'Processando...';
-        });
-        const newPasswordErrorAlert = document.getElementById('newPasswordErrorAlert');
-        const confirmPasswordErrorAlert = document.getElementById('confirmPasswordErrorAlert');
-        if (newPasswordErrorAlert) {
-            setTimeout(() => {
-                newPasswordErrorAlert.classList.add('fade');
-                setTimeout(() => newPasswordErrorAlert.remove(), 500);
-            }, 2500);
-        }
-        if (confirmPasswordErrorAlert) {
-            setTimeout(() => {
-                confirmPasswordErrorAlert.classList.add('fade');
-                setTimeout(() => confirmPasswordErrorAlert.remove(), 500);
-            }, 2500);
-        }
-    });
-</script>
+<script th:src="@{/js/common.js}"></script>
 </body>
 </html>
