--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -327,9 +327,10 @@ body {
     background-color: #f9f9f9;
     min-width: 200px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
+    z-index: 2001;
     border-radius: 4px;
     padding: 10px 0;
+    margin-top: 5px;
 }
 
 .dropdown-content a, .dropdown-content div {
@@ -342,10 +343,6 @@ body {
 
 .dropdown-content a:hover, .dropdown-content div:hover {
     background-color: #f1f1f1;
-}
-
-.user-dropdown:hover .dropdown-content {
-    display: block;
 }
 
 .user-name {
