--- a/src/main/resources/templates/score-form.html
+++ b/src/main/resources/templates/score-form.html
@@ -107,7 +107,7 @@
             </form>
         </div>
         <div class="history-panel" th:if="${roundsHistory != null and not roundsHistory.empty}">
-            <h4 class="title-middle">Última partida</h4>
+            <h4 class="title-middle">Última rodada</h4>
             <table class="table table-sm">
                 <thead>
                 <tr>
@@ -185,7 +185,7 @@
             </div>
         </form>
         <div class="history-panel" th:if="${roundsHistory != null and not roundsHistory.empty}">
-            <h4 class="title-middle">Histórico de Rodadas</h4>
+            <h4 class="title-middle">Última rodada</h4>
             <table class="table table-sm">
                 <thead>
                 <tr>
